Configure Web3Forms integration

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="close">&times;</span>
             <h2>Get In Touch</h2>
             <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+                <input type="hidden" name="access_key" value="c242ae71-8bdf-46b2-b523-b49f1fe38d82">
                 <input type="hidden" name="subject" value="New Contact Form Submission from Batsile Botlhe">
                 <input type="hidden" name="redirect" value="https://web3forms.com/success">
 
